# scufris

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  agent.go  config.yaml  delegate.go  error.go  flake.nix  go.mod  go.sum  gomod2nix.toml  pyproject.toml  requirements-dev.txt  requirements.txt  result
agent/: agent.go  crew.go  delegate.go  error.go
cmd/client/: main.go
cmd/migration/: main.go
cmd/scufris/: main.go
cmd/scufris-client/: main.go
cmd/scufris-service/: main.go
cmd/server/: main.go
examples/01-cli/: README.md  cli.py
examples/02-socket/: README.md  client.py  server.py
internal/builder/: builder.go  scufris.go
internal/callbacks/: history.go  protocol.go
internal/config/: config.go  database.go  logger.go
internal/contextkeys/: agent.go
internal/history/: database.go  file.go  history.go  transcript.go
internal/imagegen/: decorator.go  error.go  imagegen.go  logging.go  (+2 more)
llm/: decorator.go  error.go  llm.go  logging.go  message.go  ollama.go  tool.go  types.go  verbose.go
migrations/: 20250720070404_image.go  20250720070404_knowledge.go  20250720084143_history.go
models/: Modelfile.artist  Modelfile.coder  Modelfile.knowledge  Modelfile.planner  Modelfile.scufris  Modelfile.shell
registry/: registry.go
scufris/: __init__.py  agent.py  client.py  scufris.py  util.py
src/: scufris.py  tools.py
tool/: registry.go  tool.go
tools/: decorator.go  delegate.go  image.go  image_generator.go  image_read.go  logging.go  os_home.go  os_list.go  readimage.go  registry.go  retrieve.go  tool.go  weather.go  websearch.go
(+48 files in other folders)
