[project]
name = "scufris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Jercan", email = "jercan_alex27@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.0",
    "ollama>=0.6.0",
]

[project.scripts]
scufris = "scufris:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
