[project]
name = "scufris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Jercan", email = "jercan_alex27@yahoo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.0",
    "ffmpeg-python>=0.2.0",
    "ollama>=0.6.0",
    "psutil>=7.1.1",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
]

[project.scripts]
scufris = "scufris:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
